--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,8 @@
     <string name="text_event_news">Tin sự kiện</string>
     <string name="text_tab_news_info">Thông tin</string>
     <string name="text_tab_news_comment">Bình luận</string>
+    <string name="discussion_training_course_detail_news_comment_placeholder">Nhập nội dung bình luận</string>
+    <string name="title_screen_reply_create_discussion">Bình luận</string>
+    <string name="discussion_training_course_detail_comment_successfully">Gửi bình luận thành công</string>
 
 </resources>
