--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
 
 
     <string name="log_out">Thoát</string>
-    <string name="title_action_bar_home">Trang chủ</string>
+
     <string name="title_screen_news">Tin tức chung</string>
     <string name="title_screen_partner">Đối tác</string>
     <string name="text_partner_price">%s USD</string>
@@ -33,5 +33,8 @@
     <string name="title_action_bar_contact">Liên hệ</string>
     <string name="title_action_bar_news">Tin tức</string>
     <string name="title_action_bar_partner">Đối tác</string>
-
+    <string name="title_action_bar_home">Trang chủ</string>
+    <string name="title_action_bar_duan">Kho dự án</string>
+    <string name="title_action_bar_bh_online">Bán hàng online</string>
+    <string name="title_action_bar_daotao">Đào tạo</string>
 </resources>
