--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,11 @@
     <string name="text_validate_require_field_email">Email không được để trống</string>
     <string name="text_validate_email_invalid">Email không đúng định dạng</string>
     <string name="text_validate_require_field_password">Mật khẩu không được để trống</string>
+    <string name="text_validate_require_field_confirm_password">Xác nhận mật khẩu không được để trống</string>
+    <string name="change_password_error_new_password_not_equal">Mật khẩu và mật khẩu xác nhận không giống nhau</string>
     <string name="text_validate_require_field_name">Tên không được để trống</string>
+    <string name="text_validate_require_field_phone">Số điện thoại không được để trống</string>
+    <string name="text_validate_phone_invalid">Số điện thoại không đúng định dạng</string>
 
 
     <string name="log_out">Thoát</string>
