--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,9 @@
     <string name="text_validate_phone_invalid">Số điện thoại không đúng định dạng</string>
     <string name="text_validate_birth_day">Ngày sinh không được để trống</string>
     <string name="text_validate_id_number">Số CMTND không được để trống</string>
+    <string name="text_validate_require_field_old_password">Mật khẩu cũ không được để trống</string>
+    <string name="text_validate_require_field_new_password">Mật khẩu mới không được để trống</string>
+    <string name="text_validate_require_field_new_confirm_password">Xác nhận mật khẩu mới không được để trống</string>
 
 
     <string name="log_out">Thoát</string>
@@ -55,4 +58,5 @@
     <string name="profile_change_password">Đổi mật khẩu</string>
     <string name="profile_history_transactions">Lịch sử giao dịch</string>
     <string name="update_information_successfull">Cập thông tin tài khoản thành công!</string>
+    <string name="change_password_successfull">Đổi mật khẩu thành công!</string>
 </resources>
