--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <string name="text_validate_require_field_new_password">Mật khẩu mới không được để trống</string>
     <string name="text_validate_require_field_new_confirm_password">Xác nhận mật khẩu mới không được để trống</string>
     <string name="text_validate_require_field_content">Nội dung không được để trống</string>
+    <string name="text_validate_require_field_address">Địa chỉ không được để trống</string>
 
     <string name="log_out">Thoát</string>
 
