--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,13 +54,20 @@
     <string name="txt_nav_table_of_goods">Bảng hàng online</string>
     <string name="txt_nav_education_training">Huấn luyện - đào tạo</string>
     <string name="txt_nav_prerogative">Đặc quyền nghề tư vấn</string>
-    <!--<string name="title_action_bar_duan">Kho dự án</string>-->
     <string name="txt_nav_news">Tin tức</string>
     <string name="txt_nav_partner">Đối tác</string>
 
     // kho hang bat dong san
     <string name="txt_warehouse_real_estate_view_detail">Xem chi tiết</string>
     <string name="txt_warehouse_real_estate_view_table_of_goods">Xem bảng hàng</string>
+
+    <string name="txt_project_table_info">Thông tin dự án</string>
+    <string name="txt_project_table_investor">Chủ đầu tư</string>
+    <string name="txt_project_table_sales_policy">Chính sách bán hàng</string>
+    <string name="txt_project_table_model_house">Nhà mẫu 3D</string>
+    <string name="txt_project_table_utilities">Tiện ích dự án</string>
+    <string name="txt_project_table_support">Hỗ trợ dự án</string>
+
 
 
     <string name="title_screen_news">Tin tức chung</string>
