--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,15 @@
     <string name="txt_project_utilities_payment">Tính \ntiền độ nộp tiền</string>
 
 
+    <string name="txt_money">VND</string>
+    <string name="txt_moth">Tháng</string>
+    <string name="txt_day">Ngày</string>
+    <string name="txt_year">%/Năm</string>
+
+
+
+
+
     <string name="title_screen_news">Tin tức chung</string>
     <string name="title_screen_partner">Đối tác</string>
     <string name="text_partner_price">%s USD</string>
